<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemContainer"
    style="@style/CustomCardView"
    android:layout_marginStart="@dimen/cardview_padding"
    android:layout_marginEnd="@dimen/cardview_padding"
    android:layout_marginBottom="@dimen/cardview_padding"
    android:clickable="true"
    android:focusable="true"
    android:transitionName="@string/transition_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemTextSummary"
            style="@style/TextTitle"
            tools:text="@string/preferences" />

        <TextView
            android:id="@+id/itemTextTitle"
            style="@style/TextSummary"
            tools:text="@string/wiki_projects_title" />

    </LinearLayout>

</androidx.cardview.widget.CardView>